Kubernetes/deploymentupdated.yml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: nginx-deployment 
  namespace: naginx-ns 
  labels: 
    app: nginx 
 
spec: 
  replicas: 5 
  selector: 
    matchLabels: 
      app: nginx 
  template: 
    metadata:
      name: nginx-pod 
      namespace: nginx-ns 
      labels: 
        app: nginx 
    spec: 
      containers:
      - name: nginx 
        image: nginx:latest 
        ports: 
        - containerPort: 80
