Kubernetes/nginx-svc.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: nginx-svc 
  Namespace: nginx-ns 
spec: 
  selector: 
    app: nginx 
  ports: 
  - protocol: TCP 
    port: 80          	# cluster / host port  [service] 
    targetPort: 80	# container port
