Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: online-shop-ingress 
  namespace: online-shop 
  annotations: 
	nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  ingressClassName: nginx-example 
  rules: 
  - http: 
      paths: 
  	  - path: /shop  (for online-shop application) 
        pathType: Prefix 
    	  backend: 
          service: 
            name: online-shop-service 
            port: 
              number: 5173
